--- a/buttons.html
+++ b/buttons.html
@@ -7,10 +7,52 @@
   width: 105px;
   border-radius: 2px;
   cursor: pointer;
+  margin-right: 10px;
+  }
+  .join-button {
+    background-color: white;
+    border-color: rgb(41, 118, 211);
+    border-style: solid;
+    border-width: 1px;
+    color: rgb(41, 118, 211);
+    height: 40px;
+    width: 80px;
+    border-radius: 2px;
+    cursor: pointer;
   }
 
+  .tweet-button{
+    background-color: rgb(71, 154, 231);
+    color: white;
+    border: none;
+    height: 36px;
+    width: 80px;
+    border-radius: 100px;
+    font-weight: bold;
+    font-size: 15px;
+    cursor: pointer;
+  }
+
+  .start-button {
+    color: rgb(255, 8, 8);
+    height: 1000px;
+    width: 1000px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 500px;
+    border: none;
+    font-weight: bolder;
+    font-size: 100px;
+    cursor: wait;
+  }
 </style>
 
 <button class="SUBSCRIBE-button">SUBSCRIBE</button>
 
-<button>JOIN</button>
+<button class="join-button">JOIN</button>
+
+
+<button class="tweet-button">Tweet</button>
+
+<button class="start-button">start the nightmare</button>
+
+
